--- a/css/main.css
+++ b/css/main.css
@@ -288,11 +288,6 @@ textarea {
 
 /* header */
 
-h1 {
-    font-family: comic sans ms;
-    color: #33ce48;
-    padding-top: 100px;
-}
 
 nav {
     border: 1px solid #DEDEDE;
@@ -325,22 +320,41 @@ section {
     color: green;
 }
 
-/*main*/
-
-#ban1 {
-    position: absolute;
+h1 {
+    font-family: comic sans ms;
+    color: #33ce48;
+    padding-top: 100px;
 }
 
-#lapin2 {
-    position: relative;
-    width: auto;
-    padding-left: 500px;
-    padding-top: 10px;
+/*main*/
+
+main {
+    display: flex;
+    justify-content: center;
+    border-top: solid 1px;
+    margin-right: 200px;
+    margin-left: 200px;
+}
+
+.word {
+    text-align: center;
+}
+
+.ban {
+    display: flex;
+    flex-direction: column;
+}
+
+#ban1 {
+    margin-bottom: 50px;
 }
 
 #ban2 {
-    position: absolute;
-    padding-top : 100px;
+    margin-bottom: 50px;
+}
+
+#ban3 {
+    margin-bottom: 50px;
 }
 
 /* footer */
@@ -349,8 +363,8 @@ section {
     background-color: #DEDEDE;
     border-radius: 40px;
     border: 1px solid;
-    margin: 500px;
-    display: flex;
+    margin: 50px;
+
 }
 
 #icon-reseaux {
