--- a/css/main.css
+++ b/css/main.css
@@ -286,13 +286,29 @@ textarea {
     }
 }
 
+@font-face {
+    font-family: 'BlackOpsOne-Regular';
+    src: url('fonts/BlackOpsOne-Regular.ttf');
+
+}
+
 /* header */
 
+body {
+    background-color: black;
+}
 
 nav {
+    background-color: #DEDEDE;
     border: 1px solid #DEDEDE;
     width: 100%;
     display: flex;
+    border-radius: 40px;
+}
+
+.welcome {
+    color: #378B38;
+    font-family: 'BlackOpsOne-Regular', sans-serif;
 }
 
 #menu {
@@ -321,19 +337,22 @@ section {
 }
 
 h1 {
-    font-family: comic sans ms;
-    color: #33ce48;
+    font-family: 'BlackOpsOne-Regular', sans-serif;
+    color: #378B38;
     padding-top: 100px;
+}
+
+.ligne {
+    border-bottom: solid 1px;
+    margin-left: 200px;
+    margin-right: 200px;
 }
 
 /*main*/
 
-main {
+.mainp1 {
     display: flex;
     justify-content: center;
-    border-top: solid 1px;
-    margin-right: 200px;
-    margin-left: 200px;
 }
 
 .word {
@@ -354,6 +373,10 @@ main {
 }
 
 #ban3 {
+    margin-bottom: 50px;
+}
+
+#ban4 {
     margin-bottom: 50px;
 }
 
@@ -415,4 +438,26 @@ main {
 .Email {
     text-align: right;
     padding: 20px;
+}
+
+/*biography*/
+
+.bio {
+    font-size: 50px;
+    text-align: center;
+    color: #378B38;
+}
+.imageflottante {
+    float: left;
+}
+
+.lorem {
+    text-align: center;
+    font-size: 50px;
+    color: #378B38;
+}
+
+p {
+    color: #378B38;
+    font-family: 'BlackOpsOne-Regular', sans-serif;
 }
