--- a/css/main.css
+++ b/css/main.css
@@ -412,6 +412,7 @@ h1 {
     margin-top: 100px;
     margin-bottom: 100px;
     padding-bottom: 100px;
+    color: #378B38;
 }
 
 /*end header styles*/
