--- a/css/main.css
+++ b/css/main.css
@@ -330,6 +330,14 @@ textarea {
     margin: auto;
 }
 
+.alignText {
+	margin: 2em;
+}
+
+.column {
+	display: flex;
+	flex-direction: column;
+}
 
 /*end global classes*/
 
@@ -372,6 +380,20 @@ nav {
 
 a {
     color: #378B38;
+}
+
+label {
+	display: block;
+	text-align: left;
+	margin: 0 0 .1em 0;
+	color: #378B38;
+}
+
+input {
+	background-color: black;
+	border: solid 1px #378B38;
+	border-radius: 2px;
+	color: #378B38;
 }
 
 /*end common classes*/
@@ -535,3 +557,18 @@ footer {
 }
 
 /*end biographie main style*/
+
+
+/*start inscription style*/
+
+.bord {
+	border: 1px solid #378B38;
+	border-radius: 40px;
+	width: 50%;
+}
+
+.btn-account {
+	margin: 2em;
+}
+
+/*end inscription style*/
