--- a/css/main.css
+++ b/css/main.css
@@ -396,6 +396,28 @@ input {
 	color: #378B38;
 }
 
+table {
+	border-collapse: collapse;
+	width: 50%;
+	margin: auto;
+}
+
+caption {
+	color: #378B38;
+}
+
+th {
+	border: 1px solid #378B38;
+	color: #378B38;
+
+}
+
+td {
+	border: 1px solid #378B38;
+	color: #378B38;
+	width: 30%;
+}
+
 /*end common classes*/
 
 
